# qiko-graph

./: .env.example  LICENSE  pyproject.toml
notebooks/: langchain_example.ipynb
qiko_graph/: graph.py  main.py  state.py  subgraph.py  utils.py
qiko_graph/configs/: __init__.py  app_config.py  llm.py
qiko_graph/my_socket/: main.py
qiko_graph/tests/: test_configs.py
tests/: test_configs.py
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx
